Dispaly corrections
-Fixed other email link
-Fixed mobile issue of overlap about me title with text

--- a/main.css
+++ b/main.css
@@ -163,7 +163,6 @@ body, html {
 	font-size: 35px;
 	left: 40px;
 	position: relative;
-	display: inline-block;
 }
 
 #insert{
@@ -174,13 +173,21 @@ body, html {
 	display: inline-block;
 	padding: 0;
 	margin: 0;
-	top: -100px;
+	top: -40px;
 }
 #insert p{
 	font-size: 	95%;
 	width: 700px;
 	position: relative;	
 	overflow: auto;
+}
+
+#profilePicture{
+	position: relative;
+	left: 750px;
+	top: -450px;
+	display: inline-block;
+	overflow: hidden;
 }
 
 #aboutLine{
@@ -191,13 +198,7 @@ body, html {
 	background-color: black;
 }
 
-#profilePicture{
-	position: relative;
-	left: 50px;
-	top: -50px;
-	display: inline;
-	overflow: hidden;
-}
+
 
 /* ---------------------------------------------------------------------- -------------------------------------- */
 
@@ -248,7 +249,7 @@ body, html {
 	padding: 0;
 	margin: 0;
 	width: 70%;
-	
+
 	position: relative;	
 	left: 	80px;
 }
